<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xpra Client</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="password">Password</string>
    <string name="xpra_window_icon">Window Icon</string>
    <string name="xpra_window_maximize">Maximize Button</string>
    <string name="xpra_window_close">Close Button</string>
    <string name="xpra_window_contents">Window Contents</string>
    <string name="xpra_window_keyboard">Keyboard Button</string>
</resources>
