<?xml version="1.0" encoding="utf-8"?>
<org.xpra.XpraWindow
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/xpra_window"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="#888">

	<RelativeLayout android:id="@+id/xpra_window_top_bar"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="20dip"
		android:layout_alignParentTop="true"
		android:orientation="horizontal"
		android:background="#123456">

		<ImageView android:id="@+id/xpra_window_icon"
		    android:contentDescription="@string/xpra_window_icon"
			android:layout_alignParentLeft="true"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_below="@+id/xpra_window_top_bar" />

		<TextView android:id="@+id/xpra_window_title"
			android:layout_toRightOf="@+id/xpra_window_icon"
			android:textSize="12dip"
			android:paddingLeft="2dip"
			android:layout_width="fill_parent" android:layout_height="20dip" />

		<LinearLayout android:id="@+id/xpra_window_buttons"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="#BBB">

			<ImageButton android:id="@+id/xpra_window_keyboard"
			    android:contentDescription="@string/xpra_window_keyboard"
				android:background="@drawable/keyboard"
				style="@style/XpraWindowButton" />

			<ImageButton android:id="@+id/xpra_window_maximize"
			    android:contentDescription="@string/xpra_window_maximize"
				android:background="@drawable/maximize_window"
				style="@style/XpraWindowButton" />

						<ImageButton android:id="@+id/xpra_window_close"
			    android:contentDescription="@string/xpra_window_close"
				android:background="@drawable/close_window"
				style="@style/XpraWindowButton" />

		</LinearLayout>

	</RelativeLayout>

	<ImageView android:id="@+id/xpra_window_contents"
	    android:contentDescription="@string/xpra_window_contents"
		android:layout_below="@+id/xpra_window_top_bar"
		android:layout_height="wrap_content" android:layout_width="wrap_content" />

</org.xpra.XpraWindow>