<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#123456"
	android:fillViewport="true">

	<LinearLayout android:id="@+id/xpra_connect_form"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentTop="true" >

		<TextView android:text="@string/hostname" android:layout_marginTop="5dp"
	              android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<EditText android:id="@+id/xpra_connect_hostname" android:inputType="text|textNoSuggestions"
	              android:layout_width="fill_parent" android:layout_height="wrap_content"
	              android:text="192.168.42.100" />
		<TextView android:text="@string/port" android:layout_marginTop="5dp"
		          android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<EditText android:id="@+id/xpra_connect_port"
	              android:layout_width="fill_parent" android:layout_height="wrap_content"
	              android:digits="0123456789" android:inputType="phone|textNoSuggestions"
	              android:text="10000" />
		<TextView android:text="@string/password" android:layout_marginTop="5dp"
	              android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<EditText android:id="@+id/xpra_connect_password" android:inputType="text|textNoSuggestions"
	              android:layout_width="fill_parent" android:layout_height="wrap_content"
	              android:password="true" />
	</LinearLayout>

	<LinearLayout android:id="@+id/connect_buttons" android:layout_width="fill_parent"
	    android:layout_height="wrap_content" android:orientation="horizontal"
	    android:layout_alignParentBottom="true" style="@android:style/ButtonBar">

	    <Button android:id="@+id/xpra_connect_button" android:layout_width="wrap_content"
	        android:layout_height="wrap_content" android:layout_weight="1"
	        android:text="Connect"
			android:clickable="false" />

	</LinearLayout>

</RelativeLayout>